TODO:
- classpath, jamvm
- add ./packages/* to svn
- remove all "binary only" from svn

revision 52:
- fixed target "openvpn-package" (exclude .svn directories)
revision 51:
- added ./packages/openvpn-2.1_rc2/
revision 50:
- updated openssl to 0.9.8e
- updated to openvpn-2.1_rc2-dsmod-0.6c
- removed ./dl/openvpn-2.1_rc2-dsmod-0.6b.tar.bz2
revision 49:
- fixed bug in modhosts (http://www.ip-phone-forum.de/showthread.php?t=128048)
- removed packages from dl/
- updated bird.mk
revision 46:
- added 2170, 3131, 3170 and 5050 (untested)
- added cifsmount (Package and kernel-patch)
- removed iptables from vpnc-script
revision 45:
- updated dropbear to 0.49
- added debootstrap, lynx and netsnmp (thanks to derheimi)
- added gcc-4.1.2 to toolchain-options
revision 43:
- fixed classpath, fuse, jamvm, ntfs
- updated callmonitor to 1.8.3
- other small changes
revision 42:
- added 7050
revision 41:
- updated openvpn to 2.1_rc2
- downgrade matrixssl to 1.7.3 (because of download-source)
- fixed ntfs-3g (2 fuse patches)
revision 40:
- more busybox-patches
- vpnc updated to 0.4.0
revision 39:
- updated backup/restore-cgi to Haserl 0.9.x syntax
revision 38:
- added matrixssl-1-8-3-open (lib)
- added matrixtunnel-0.2 (package)
revision 36:
- added Rudi-Shell
revision 35:
- minor fixes in bird.mk, readline.mk
- added fuse 2.6.3
- added ntfs-3g-1.0
- added classpath-0.93
- added libffi-sable-3325
- added jamvm-1.4.5
revision 34:
- minor fixes in pingtunnel.mk, streamripper.mk, tcpdump.mk and bird.mk
- added busybox-patch (tar -t segfault)
revision 33:
- added pingtunnel
- minor fixes in libpcap-patches, busybox-patches
revision 32:
- added tcpdump
- haserl updated to 0.9.16
- minor changes in file.cgi, modhosts
revision 31:
- added bird-1.0.11 (thanks to derheimi)
revision 30:
- added streamripper-1.61.17
- added libmad-0.15.1b 
revision 28:
- added Lua scripting language
- updated dnsmasq to version 2.38
revision 25:
- updated busybox-patches
- make target for uclibc-utils