@@ -1,6 +1,6 @@
 config DS_PACKAGE_PINGTUNNEL
 	bool "pingtunnel-0.61 (binary only)"
-	default y
-	select DS_LIBPCAP
+	default n
+	select DS_LIB_libpcap
 	help
 	    Ptunnel is an application that allows you to reliably tunnel TCP connections to a remote host using ICMP echo request and reply packets, commonly known as ping requests and replies. At first glance, this might seem like a rather useless thing to do, but it can actually come in handy in some cases.
